--- a/NMT_English_to_telugu.ipynb
+++ b/NMT_English_to_telugu.ipynb
@@ -209,6 +209,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "*   Train dataset: [Training Dataset](https://drive.google.com/drive/folders/1FVNDObikAGsufnHEAPqVFPSojxO-YgNu?usp=sharing)\n",
+        "*   Test dataset: [Test Dataset](https://drive.google.com/drive/folders/1XIDPsGcRndc0Lmebzd5am9gKawciOCIX?usp=sharing)\n",
+        "*   Validation dataset: [Validation Dataset](https://drive.google.com/drive/folders/1n_DdrtShU7ji4HjC2rF6pCzu1gwhOgss?usp=drive_link)"
+      ],
+      "metadata": {
+        "id": "twovnTUNH-39"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Path declaration"
       ],
       "metadata": {
